// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Qvain dataset list PreservationStates should render <TablePasState /> 1`] = `
<Fragment>
  <tablePasState__PasLabel
    color="primary"
  >
    PAS
  </tablePasState__PasLabel>
  <Translate
    component={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "tablePasState__PasText-sc-1w7mbwe-1",
          "isStatic": true,
          "rules": Array [
            "
  margin-left: 10px;
  font-size: 0.8em;
  :before {
    content: '(';
  }
  :after {
    content: ')';
  }
",
          ],
        },
        "displayName": "tablePasState__PasText",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "tablePasState__PasText-sc-1w7mbwe-1",
        "target": "span",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    content="qvain.pasState.0"
  />
</Fragment>
`;

exports[`Qvain should render correctly 1`] = `
<ContextConsumer>
  <Component />
</ContextConsumer>
`;

exports[`Qvain.Description should render <Description /> 1`] = `
<div
  className="container"
>
  <title__SectionTitle>
    <Translate
      component="span"
      content="qvain.description.title"
    />
    <Tooltip
      align="Right"
      close={[Function]}
      isOpen={false}
      text={<DescriptionInfo />}
    >
      <HelpIcon
        aria-label="Description info"
        onClick={[Function]}
      />
    </Tooltip>
  </title__SectionTitle>
  <inject-DescriptionField-with-Stores />
  <inject-IssuedDateField-with-Stores />
  <inject-OtherIdentifierField-with-Stores />
  <inject-FieldOfScienceField-with-Stores />
  <inject-LanguageField-with-Stores />
  <inject-KeywordsField-with-Stores />
</div>
`;

exports[`Qvain.Description should render <DescriptionField /> 1`] = `
<DescriptionField
  Stores={
    Object {
      "Env": Env {
        "environment": "test",
        "history": RouterStore {
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "history": null,
          "push": [Function],
          "replace": [Function],
        },
        "metaxApiV2": true,
      },
      "Locale": Locale {
        "currentLang": "en",
        "languages": Array [
          "en",
          "fi",
        ],
      },
      "Qvain": Qvain {
        "Actors": Actors {
          "Qvain": [Circular],
          "actorInEdit": null,
          "actors": Array [],
          "editDataset": [Function],
          "getDatasetOrganizations": [Function],
          "getReferenceOrganizations": [Function],
          "getReferenceOrganizationsForActor": [Function],
          "loadingReferenceOrganizations": Object {},
          "onSuccessfulCreationCallbacks": Array [],
          "referenceOrganizationErrors": Object {},
          "referenceOrganizations": Object {},
          "setSelectedActor": undefined,
          "toBackend": [Function],
        },
        "Env": Env {
          "environment": "test",
          "history": RouterStore {
            "go": [Function],
            "goBack": [Function],
            "goForward": [Function],
            "history": null,
            "push": [Function],
            "replace": [Function],
          },
          "metaxApiV2": true,
        },
        "Files": Files {
          "AddItemsView": AddItemsView {
            "Files": [Circular],
            "checkedState": Object {},
            "defaultShowLimit": 20,
            "getTopmostChecked": [Function],
            "isOpen": [Function],
            "openState": Object {},
            "showLimitIncrement": 20,
            "showLimitState": Object {},
          },
          "Qvain": [Circular],
          "SelectedItemsView": SelectedItemsView {
            "Files": [Circular],
            "checkedState": Object {},
            "defaultShowLimit": 20,
            "getTopmostChecked": [Function],
            "hideRemoved": false,
            "isOpen": [Function],
            "openState": Object {},
            "showLimitIncrement": 20,
            "showLimitState": Object {},
          },
          "cache": Object {},
          "cancelOnReset": [Function],
          "datasetIdentifier": null,
          "fetchRootIdentifier": [Function],
          "getItemByPath": [Function],
          "inEdit": undefined,
          "loadingMetadata": null,
          "loadingProjectInfo": null,
          "loadingProjectRoot": null,
          "metadataToMetax": [Function],
          "originalMetadata": Object {},
          "projectLocked": false,
          "promiseManager": PromiseManager {
            "add": [Function],
            "promises": Array [],
          },
          "refreshModalDirectory": null,
          "root": null,
          "selectedProject": undefined,
        },
        "Provenances": Provenances {
          "Parent": [Circular],
          "RelatedResources": RelatedResources {
            "Parent": [Circular],
            "Template": [Function],
            "attachRefs": [Function],
            "cloneRefs": [Function],
            "detachRefs": [Function],
            "fieldName": "relatedResources",
            "isParentRoot": [Function],
            "readonly": false,
            "references": Array [],
            "relatedResourceToBackend": [Function],
            "saveEdited": [Function],
            "saveNew": [Function],
            "toBackend": [Function],
          },
          "Spatials": Spatials {
            "Parent": [Circular],
            "Template": [Function],
            "attachRefs": [Function],
            "cloneRefs": [Function],
            "detachRefs": [Function],
            "fieldName": "spatials",
            "isParentRoot": [Function],
            "readonly": false,
            "references": Array [],
            "saveEdited": [Function],
            "saveNew": [Function],
            "spatialToBackend": [Function],
            "toBackend": [Function],
          },
          "Template": [Function],
          "attachRefs": [Function],
          "cloneRefs": [Function],
          "detachRefs": [Function],
          "fieldName": "provenances",
          "isParentRoot": [Function],
          "readonly": false,
          "references": Array [
            "associations",
          ],
          "saveEdited": [Function],
          "saveNew": [Function],
          "toBackend": [Function],
        },
        "RelatedResources": RelatedResources {
          "Parent": [Circular],
          "Template": [Function],
          "attachRefs": [Function],
          "cloneRefs": [Function],
          "detachRefs": [Function],
          "fieldName": "relatedResources",
          "isParentRoot": [Function],
          "readonly": false,
          "references": Array [],
          "relatedResourceToBackend": [Function],
          "saveEdited": [Function],
          "saveNew": [Function],
          "toBackend": [Function],
        },
        "Spatials": Spatials {
          "Parent": [Circular],
          "Template": [Function],
          "attachRefs": [Function],
          "cloneRefs": [Function],
          "detachRefs": [Function],
          "fieldName": "spatials",
          "isParentRoot": [Function],
          "readonly": false,
          "references": Array [],
          "saveEdited": [Function],
          "saveNew": [Function],
          "spatialToBackend": [Function],
          "toBackend": [Function],
        },
        "Temporals": Temporals {
          "Parent": [Circular],
          "Template": [Function],
          "attachRefs": [Function],
          "cloneRefs": [Function],
          "detachRefs": [Function],
          "editMode": false,
          "fieldName": "temporals",
          "hasChanged": false,
          "inEdit": Object {
            "endDate": undefined,
            "startDate": undefined,
            "uiid": "0df3997e-7cb7-4aff-87f9-e245d1ce4b19",
          },
          "isParentRoot": [Function],
          "readonly": false,
          "references": Array [],
          "saveEdited": [Function],
          "saveNew": [Function],
          "toBackend": [Function],
          "validationError": undefined,
        },
        "accessType": Object {
          "name": undefined,
          "url": "http://uri.suomi.fi/codelist/fairdata/access_type/code/open",
        },
        "changed": false,
        "createExternalResourceUIId": [Function],
        "createLooseActorPromise": [Function],
        "createLooseProvenancePromise": [Function],
        "cumulativeState": 0,
        "dataCatalog": undefined,
        "datasetLanguage": undefined,
        "datasetLanguageArray": Array [],
        "deprecated": false,
        "description": Object {
          "en": "",
          "fi": "",
        },
        "deselectChildren": [Function],
        "deselectParents": [Function],
        "embargoExpDate": undefined,
        "existingDirectories": Array [],
        "existingFiles": Array [],
        "extResFormOpen": false,
        "externalResourceInEdit": Object {
          "accessUrl": "",
          "downloadUrl": "",
          "id": undefined,
          "title": "",
          "useCategory": "",
        },
        "externalResources": Array [],
        "fieldOfScience": undefined,
        "fieldOfScienceArray": Array [],
        "fixDeprecatedModalOpen": false,
        "hierarchy": Object {},
        "idaPickerOpen": false,
        "inEdit": undefined,
        "infrastructure": undefined,
        "infrastructures": Array [],
        "issuedDate": undefined,
        "keywordString": "",
        "keywordsArray": Array [],
        "license": Object {
          "identifier": "http://uri.suomi.fi/codelist/fairdata/license/code/CC-BY-4.0",
          "name": undefined,
        },
        "licenseArray": Array [],
        "mergeArraysByIdentifier": [Function],
        "metadataModalFile": undefined,
        "newCumulativeState": 0,
        "original": undefined,
        "otherIdentifier": "",
        "otherIdentifiersArray": Array [],
        "otherIdentifiersValidationError": null,
        "otherLicenseUrl": "",
        "preservationState": 0,
        "promptLooseActors": undefined,
        "promptLooseProvenances": undefined,
        "provenances": Array [],
        "provenancesWithNonExistingActors": Array [],
        "relatedResources": Array [],
        "restrictionGrounds": Object {},
        "selectedDirectories": Array [],
        "selectedFiles": Array [],
        "selectedProject": undefined,
        "setOtherIdentifierValidationError": [Function],
        "spatials": Array [],
        "temporals": Array [],
        "title": Object {
          "en": "",
          "fi": "",
        },
        "useDoi": false,
      },
    }
  }
/>
`;

exports[`Qvain.Description should render <FieldOfScienceField /> 1`] = `
<FieldOfScienceField
  Stores={
    Object {
      "Env": Env {
        "environment": "test",
        "history": RouterStore {
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "history": null,
          "push": [Function],
          "replace": [Function],
        },
        "metaxApiV2": true,
      },
      "Locale": Locale {
        "currentLang": "en",
        "languages": Array [
          "en",
          "fi",
        ],
      },
      "Qvain": Qvain {
        "Actors": Actors {
          "Qvain": [Circular],
          "actorInEdit": null,
          "actors": Array [],
          "editDataset": [Function],
          "getDatasetOrganizations": [Function],
          "getReferenceOrganizations": [Function],
          "getReferenceOrganizationsForActor": [Function],
          "loadingReferenceOrganizations": Object {},
          "onSuccessfulCreationCallbacks": Array [],
          "referenceOrganizationErrors": Object {},
          "referenceOrganizations": Object {},
          "setSelectedActor": undefined,
          "toBackend": [Function],
        },
        "Env": Env {
          "environment": "test",
          "history": RouterStore {
            "go": [Function],
            "goBack": [Function],
            "goForward": [Function],
            "history": null,
            "push": [Function],
            "replace": [Function],
          },
          "metaxApiV2": true,
        },
        "Files": Files {
          "AddItemsView": AddItemsView {
            "Files": [Circular],
            "checkedState": Object {},
            "defaultShowLimit": 20,
            "getTopmostChecked": [Function],
            "isOpen": [Function],
            "openState": Object {},
            "showLimitIncrement": 20,
            "showLimitState": Object {},
          },
          "Qvain": [Circular],
          "SelectedItemsView": SelectedItemsView {
            "Files": [Circular],
            "checkedState": Object {},
            "defaultShowLimit": 20,
            "getTopmostChecked": [Function],
            "hideRemoved": false,
            "isOpen": [Function],
            "openState": Object {},
            "showLimitIncrement": 20,
            "showLimitState": Object {},
          },
          "cache": Object {},
          "cancelOnReset": [Function],
          "datasetIdentifier": null,
          "fetchRootIdentifier": [Function],
          "getItemByPath": [Function],
          "inEdit": undefined,
          "loadingMetadata": null,
          "loadingProjectInfo": null,
          "loadingProjectRoot": null,
          "metadataToMetax": [Function],
          "originalMetadata": Object {},
          "projectLocked": false,
          "promiseManager": PromiseManager {
            "add": [Function],
            "promises": Array [],
          },
          "refreshModalDirectory": null,
          "root": null,
          "selectedProject": undefined,
        },
        "Provenances": Provenances {
          "Parent": [Circular],
          "RelatedResources": RelatedResources {
            "Parent": [Circular],
            "Template": [Function],
            "attachRefs": [Function],
            "cloneRefs": [Function],
            "detachRefs": [Function],
            "fieldName": "relatedResources",
            "isParentRoot": [Function],
            "readonly": false,
            "references": Array [],
            "relatedResourceToBackend": [Function],
            "saveEdited": [Function],
            "saveNew": [Function],
            "toBackend": [Function],
          },
          "Spatials": Spatials {
            "Parent": [Circular],
            "Template": [Function],
            "attachRefs": [Function],
            "cloneRefs": [Function],
            "detachRefs": [Function],
            "fieldName": "spatials",
            "isParentRoot": [Function],
            "readonly": false,
            "references": Array [],
            "saveEdited": [Function],
            "saveNew": [Function],
            "spatialToBackend": [Function],
            "toBackend": [Function],
          },
          "Template": [Function],
          "attachRefs": [Function],
          "cloneRefs": [Function],
          "detachRefs": [Function],
          "fieldName": "provenances",
          "isParentRoot": [Function],
          "readonly": false,
          "references": Array [
            "associations",
          ],
          "saveEdited": [Function],
          "saveNew": [Function],
          "toBackend": [Function],
        },
        "RelatedResources": RelatedResources {
          "Parent": [Circular],
          "Template": [Function],
          "attachRefs": [Function],
          "cloneRefs": [Function],
          "detachRefs": [Function],
          "fieldName": "relatedResources",
          "isParentRoot": [Function],
          "readonly": false,
          "references": Array [],
          "relatedResourceToBackend": [Function],
          "saveEdited": [Function],
          "saveNew": [Function],
          "toBackend": [Function],
        },
        "Spatials": Spatials {
          "Parent": [Circular],
          "Template": [Function],
          "attachRefs": [Function],
          "cloneRefs": [Function],
          "detachRefs": [Function],
          "fieldName": "spatials",
          "isParentRoot": [Function],
          "readonly": false,
          "references": Array [],
          "saveEdited": [Function],
          "saveNew": [Function],
          "spatialToBackend": [Function],
          "toBackend": [Function],
        },
        "Temporals": Temporals {
          "Parent": [Circular],
          "Template": [Function],
          "attachRefs": [Function],
          "cloneRefs": [Function],
          "detachRefs": [Function],
          "editMode": false,
          "fieldName": "temporals",
          "hasChanged": false,
          "inEdit": Object {
            "endDate": undefined,
            "startDate": undefined,
            "uiid": "0df3997e-7cb7-4aff-87f9-e245d1ce4b19",
          },
          "isParentRoot": [Function],
          "readonly": false,
          "references": Array [],
          "saveEdited": [Function],
          "saveNew": [Function],
          "toBackend": [Function],
          "validationError": undefined,
        },
        "accessType": Object {
          "name": undefined,
          "url": "http://uri.suomi.fi/codelist/fairdata/access_type/code/open",
        },
        "changed": false,
        "createExternalResourceUIId": [Function],
        "createLooseActorPromise": [Function],
        "createLooseProvenancePromise": [Function],
        "cumulativeState": 0,
        "dataCatalog": undefined,
        "datasetLanguage": undefined,
        "datasetLanguageArray": Array [],
        "deprecated": false,
        "description": Object {
          "en": "",
          "fi": "",
        },
        "deselectChildren": [Function],
        "deselectParents": [Function],
        "embargoExpDate": undefined,
        "existingDirectories": Array [],
        "existingFiles": Array [],
        "extResFormOpen": false,
        "externalResourceInEdit": Object {
          "accessUrl": "",
          "downloadUrl": "",
          "id": undefined,
          "title": "",
          "useCategory": "",
        },
        "externalResources": Array [],
        "fieldOfScience": undefined,
        "fieldOfScienceArray": Array [],
        "fixDeprecatedModalOpen": false,
        "hierarchy": Object {},
        "idaPickerOpen": false,
        "inEdit": undefined,
        "infrastructure": undefined,
        "infrastructures": Array [],
        "issuedDate": undefined,
        "keywordString": "",
        "keywordsArray": Array [],
        "license": Object {
          "identifier": "http://uri.suomi.fi/codelist/fairdata/license/code/CC-BY-4.0",
          "name": undefined,
        },
        "licenseArray": Array [],
        "mergeArraysByIdentifier": [Function],
        "metadataModalFile": undefined,
        "newCumulativeState": 0,
        "original": undefined,
        "otherIdentifier": "",
        "otherIdentifiersArray": Array [],
        "otherIdentifiersValidationError": null,
        "otherLicenseUrl": "",
        "preservationState": 0,
        "promptLooseActors": undefined,
        "promptLooseProvenances": undefined,
        "provenances": Array [],
        "provenancesWithNonExistingActors": Array [],
        "relatedResources": Array [],
        "restrictionGrounds": Object {},
        "selectedDirectories": Array [],
        "selectedFiles": Array [],
        "selectedProject": undefined,
        "setOtherIdentifierValidationError": [Function],
        "spatials": Array [],
        "temporals": Array [],
        "title": Object {
          "en": "",
          "fi": "",
        },
        "useDoi": false,
      },
    }
  }
/>
`;

exports[`Qvain.Description should render <KeywordsField /> 1`] = `
<KeywordsField
  Stores={
    Object {
      "Env": Env {
        "environment": "test",
        "history": RouterStore {
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "history": null,
          "push": [Function],
          "replace": [Function],
        },
        "metaxApiV2": true,
      },
      "Locale": Locale {
        "currentLang": "en",
        "languages": Array [
          "en",
          "fi",
        ],
      },
      "Qvain": Qvain {
        "Actors": Actors {
          "Qvain": [Circular],
          "actorInEdit": null,
          "actors": Array [],
          "editDataset": [Function],
          "getDatasetOrganizations": [Function],
          "getReferenceOrganizations": [Function],
          "getReferenceOrganizationsForActor": [Function],
          "loadingReferenceOrganizations": Object {},
          "onSuccessfulCreationCallbacks": Array [],
          "referenceOrganizationErrors": Object {},
          "referenceOrganizations": Object {},
          "setSelectedActor": undefined,
          "toBackend": [Function],
        },
        "Env": Env {
          "environment": "test",
          "history": RouterStore {
            "go": [Function],
            "goBack": [Function],
            "goForward": [Function],
            "history": null,
            "push": [Function],
            "replace": [Function],
          },
          "metaxApiV2": true,
        },
        "Files": Files {
          "AddItemsView": AddItemsView {
            "Files": [Circular],
            "checkedState": Object {},
            "defaultShowLimit": 20,
            "getTopmostChecked": [Function],
            "isOpen": [Function],
            "openState": Object {},
            "showLimitIncrement": 20,
            "showLimitState": Object {},
          },
          "Qvain": [Circular],
          "SelectedItemsView": SelectedItemsView {
            "Files": [Circular],
            "checkedState": Object {},
            "defaultShowLimit": 20,
            "getTopmostChecked": [Function],
            "hideRemoved": false,
            "isOpen": [Function],
            "openState": Object {},
            "showLimitIncrement": 20,
            "showLimitState": Object {},
          },
          "cache": Object {},
          "cancelOnReset": [Function],
          "datasetIdentifier": null,
          "fetchRootIdentifier": [Function],
          "getItemByPath": [Function],
          "inEdit": undefined,
          "loadingMetadata": null,
          "loadingProjectInfo": null,
          "loadingProjectRoot": null,
          "metadataToMetax": [Function],
          "originalMetadata": Object {},
          "projectLocked": false,
          "promiseManager": PromiseManager {
            "add": [Function],
            "promises": Array [],
          },
          "refreshModalDirectory": null,
          "root": null,
          "selectedProject": undefined,
        },
        "Provenances": Provenances {
          "Parent": [Circular],
          "RelatedResources": RelatedResources {
            "Parent": [Circular],
            "Template": [Function],
            "attachRefs": [Function],
            "cloneRefs": [Function],
            "detachRefs": [Function],
            "fieldName": "relatedResources",
            "isParentRoot": [Function],
            "readonly": false,
            "references": Array [],
            "relatedResourceToBackend": [Function],
            "saveEdited": [Function],
            "saveNew": [Function],
            "toBackend": [Function],
          },
          "Spatials": Spatials {
            "Parent": [Circular],
            "Template": [Function],
            "attachRefs": [Function],
            "cloneRefs": [Function],
            "detachRefs": [Function],
            "fieldName": "spatials",
            "isParentRoot": [Function],
            "readonly": false,
            "references": Array [],
            "saveEdited": [Function],
            "saveNew": [Function],
            "spatialToBackend": [Function],
            "toBackend": [Function],
          },
          "Template": [Function],
          "attachRefs": [Function],
          "cloneRefs": [Function],
          "detachRefs": [Function],
          "fieldName": "provenances",
          "isParentRoot": [Function],
          "readonly": false,
          "references": Array [
            "associations",
          ],
          "saveEdited": [Function],
          "saveNew": [Function],
          "toBackend": [Function],
        },
        "RelatedResources": RelatedResources {
          "Parent": [Circular],
          "Template": [Function],
          "attachRefs": [Function],
          "cloneRefs": [Function],
          "detachRefs": [Function],
          "fieldName": "relatedResources",
          "isParentRoot": [Function],
          "readonly": false,
          "references": Array [],
          "relatedResourceToBackend": [Function],
          "saveEdited": [Function],
          "saveNew": [Function],
          "toBackend": [Function],
        },
        "Spatials": Spatials {
          "Parent": [Circular],
          "Template": [Function],
          "attachRefs": [Function],
          "cloneRefs": [Function],
          "detachRefs": [Function],
          "fieldName": "spatials",
          "isParentRoot": [Function],
          "readonly": false,
          "references": Array [],
          "saveEdited": [Function],
          "saveNew": [Function],
          "spatialToBackend": [Function],
          "toBackend": [Function],
        },
        "Temporals": Temporals {
          "Parent": [Circular],
          "Template": [Function],
          "attachRefs": [Function],
          "cloneRefs": [Function],
          "detachRefs": [Function],
          "editMode": false,
          "fieldName": "temporals",
          "hasChanged": false,
          "inEdit": Object {
            "endDate": undefined,
            "startDate": undefined,
            "uiid": "0df3997e-7cb7-4aff-87f9-e245d1ce4b19",
          },
          "isParentRoot": [Function],
          "readonly": false,
          "references": Array [],
          "saveEdited": [Function],
          "saveNew": [Function],
          "toBackend": [Function],
          "validationError": undefined,
        },
        "accessType": Object {
          "name": undefined,
          "url": "http://uri.suomi.fi/codelist/fairdata/access_type/code/open",
        },
        "changed": false,
        "createExternalResourceUIId": [Function],
        "createLooseActorPromise": [Function],
        "createLooseProvenancePromise": [Function],
        "cumulativeState": 0,
        "dataCatalog": undefined,
        "datasetLanguage": undefined,
        "datasetLanguageArray": Array [],
        "deprecated": false,
        "description": Object {
          "en": "",
          "fi": "",
        },
        "deselectChildren": [Function],
        "deselectParents": [Function],
        "embargoExpDate": undefined,
        "existingDirectories": Array [],
        "existingFiles": Array [],
        "extResFormOpen": false,
        "externalResourceInEdit": Object {
          "accessUrl": "",
          "downloadUrl": "",
          "id": undefined,
          "title": "",
          "useCategory": "",
        },
        "externalResources": Array [],
        "fieldOfScience": undefined,
        "fieldOfScienceArray": Array [],
        "fixDeprecatedModalOpen": false,
        "hierarchy": Object {},
        "idaPickerOpen": false,
        "inEdit": undefined,
        "infrastructure": undefined,
        "infrastructures": Array [],
        "issuedDate": undefined,
        "keywordString": "",
        "keywordsArray": Array [],
        "license": Object {
          "identifier": "http://uri.suomi.fi/codelist/fairdata/license/code/CC-BY-4.0",
          "name": undefined,
        },
        "licenseArray": Array [],
        "mergeArraysByIdentifier": [Function],
        "metadataModalFile": undefined,
        "newCumulativeState": 0,
        "original": undefined,
        "otherIdentifier": "",
        "otherIdentifiersArray": Array [],
        "otherIdentifiersValidationError": null,
        "otherLicenseUrl": "",
        "preservationState": 0,
        "promptLooseActors": undefined,
        "promptLooseProvenances": undefined,
        "provenances": Array [],
        "provenancesWithNonExistingActors": Array [],
        "relatedResources": Array [],
        "restrictionGrounds": Object {},
        "selectedDirectories": Array [],
        "selectedFiles": Array [],
        "selectedProject": undefined,
        "setOtherIdentifierValidationError": [Function],
        "spatials": Array [],
        "temporals": Array [],
        "title": Object {
          "en": "",
          "fi": "",
        },
        "useDoi": false,
      },
    }
  }
/>
`;

exports[`Qvain.Description should render <LanguageField /> 1`] = `
<LanguageField
  Stores={
    Object {
      "Env": Env {
        "environment": "test",
        "history": RouterStore {
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "history": null,
          "push": [Function],
          "replace": [Function],
        },
        "metaxApiV2": true,
      },
      "Locale": Locale {
        "currentLang": "en",
        "languages": Array [
          "en",
          "fi",
        ],
      },
      "Qvain": Qvain {
        "Actors": Actors {
          "Qvain": [Circular],
          "actorInEdit": null,
          "actors": Array [],
          "editDataset": [Function],
          "getDatasetOrganizations": [Function],
          "getReferenceOrganizations": [Function],
          "getReferenceOrganizationsForActor": [Function],
          "loadingReferenceOrganizations": Object {},
          "onSuccessfulCreationCallbacks": Array [],
          "referenceOrganizationErrors": Object {},
          "referenceOrganizations": Object {},
          "setSelectedActor": undefined,
          "toBackend": [Function],
        },
        "Env": Env {
          "environment": "test",
          "history": RouterStore {
            "go": [Function],
            "goBack": [Function],
            "goForward": [Function],
            "history": null,
            "push": [Function],
            "replace": [Function],
          },
          "metaxApiV2": true,
        },
        "Files": Files {
          "AddItemsView": AddItemsView {
            "Files": [Circular],
            "checkedState": Object {},
            "defaultShowLimit": 20,
            "getTopmostChecked": [Function],
            "isOpen": [Function],
            "openState": Object {},
            "showLimitIncrement": 20,
            "showLimitState": Object {},
          },
          "Qvain": [Circular],
          "SelectedItemsView": SelectedItemsView {
            "Files": [Circular],
            "checkedState": Object {},
            "defaultShowLimit": 20,
            "getTopmostChecked": [Function],
            "hideRemoved": false,
            "isOpen": [Function],
            "openState": Object {},
            "showLimitIncrement": 20,
            "showLimitState": Object {},
          },
          "cache": Object {},
          "cancelOnReset": [Function],
          "datasetIdentifier": null,
          "fetchRootIdentifier": [Function],
          "getItemByPath": [Function],
          "inEdit": undefined,
          "loadingMetadata": null,
          "loadingProjectInfo": null,
          "loadingProjectRoot": null,
          "metadataToMetax": [Function],
          "originalMetadata": Object {},
          "projectLocked": false,
          "promiseManager": PromiseManager {
            "add": [Function],
            "promises": Array [],
          },
          "refreshModalDirectory": null,
          "root": null,
          "selectedProject": undefined,
        },
        "Provenances": Provenances {
          "Parent": [Circular],
          "RelatedResources": RelatedResources {
            "Parent": [Circular],
            "Template": [Function],
            "attachRefs": [Function],
            "cloneRefs": [Function],
            "detachRefs": [Function],
            "fieldName": "relatedResources",
            "isParentRoot": [Function],
            "readonly": false,
            "references": Array [],
            "relatedResourceToBackend": [Function],
            "saveEdited": [Function],
            "saveNew": [Function],
            "toBackend": [Function],
          },
          "Spatials": Spatials {
            "Parent": [Circular],
            "Template": [Function],
            "attachRefs": [Function],
            "cloneRefs": [Function],
            "detachRefs": [Function],
            "fieldName": "spatials",
            "isParentRoot": [Function],
            "readonly": false,
            "references": Array [],
            "saveEdited": [Function],
            "saveNew": [Function],
            "spatialToBackend": [Function],
            "toBackend": [Function],
          },
          "Template": [Function],
          "attachRefs": [Function],
          "cloneRefs": [Function],
          "detachRefs": [Function],
          "fieldName": "provenances",
          "isParentRoot": [Function],
          "readonly": false,
          "references": Array [
            "associations",
          ],
          "saveEdited": [Function],
          "saveNew": [Function],
          "toBackend": [Function],
        },
        "RelatedResources": RelatedResources {
          "Parent": [Circular],
          "Template": [Function],
          "attachRefs": [Function],
          "cloneRefs": [Function],
          "detachRefs": [Function],
          "fieldName": "relatedResources",
          "isParentRoot": [Function],
          "readonly": false,
          "references": Array [],
          "relatedResourceToBackend": [Function],
          "saveEdited": [Function],
          "saveNew": [Function],
          "toBackend": [Function],
        },
        "Spatials": Spatials {
          "Parent": [Circular],
          "Template": [Function],
          "attachRefs": [Function],
          "cloneRefs": [Function],
          "detachRefs": [Function],
          "fieldName": "spatials",
          "isParentRoot": [Function],
          "readonly": false,
          "references": Array [],
          "saveEdited": [Function],
          "saveNew": [Function],
          "spatialToBackend": [Function],
          "toBackend": [Function],
        },
        "Temporals": Temporals {
          "Parent": [Circular],
          "Template": [Function],
          "attachRefs": [Function],
          "cloneRefs": [Function],
          "detachRefs": [Function],
          "editMode": false,
          "fieldName": "temporals",
          "hasChanged": false,
          "inEdit": Object {
            "endDate": undefined,
            "startDate": undefined,
            "uiid": "0df3997e-7cb7-4aff-87f9-e245d1ce4b19",
          },
          "isParentRoot": [Function],
          "readonly": false,
          "references": Array [],
          "saveEdited": [Function],
          "saveNew": [Function],
          "toBackend": [Function],
          "validationError": undefined,
        },
        "accessType": Object {
          "name": undefined,
          "url": "http://uri.suomi.fi/codelist/fairdata/access_type/code/open",
        },
        "changed": false,
        "createExternalResourceUIId": [Function],
        "createLooseActorPromise": [Function],
        "createLooseProvenancePromise": [Function],
        "cumulativeState": 0,
        "dataCatalog": undefined,
        "datasetLanguage": undefined,
        "datasetLanguageArray": Array [],
        "deprecated": false,
        "description": Object {
          "en": "",
          "fi": "",
        },
        "deselectChildren": [Function],
        "deselectParents": [Function],
        "embargoExpDate": undefined,
        "existingDirectories": Array [],
        "existingFiles": Array [],
        "extResFormOpen": false,
        "externalResourceInEdit": Object {
          "accessUrl": "",
          "downloadUrl": "",
          "id": undefined,
          "title": "",
          "useCategory": "",
        },
        "externalResources": Array [],
        "fieldOfScience": undefined,
        "fieldOfScienceArray": Array [],
        "fixDeprecatedModalOpen": false,
        "hierarchy": Object {},
        "idaPickerOpen": false,
        "inEdit": undefined,
        "infrastructure": undefined,
        "infrastructures": Array [],
        "issuedDate": undefined,
        "keywordString": "",
        "keywordsArray": Array [],
        "license": Object {
          "identifier": "http://uri.suomi.fi/codelist/fairdata/license/code/CC-BY-4.0",
          "name": undefined,
        },
        "licenseArray": Array [],
        "mergeArraysByIdentifier": [Function],
        "metadataModalFile": undefined,
        "newCumulativeState": 0,
        "original": undefined,
        "otherIdentifier": "",
        "otherIdentifiersArray": Array [],
        "otherIdentifiersValidationError": null,
        "otherLicenseUrl": "",
        "preservationState": 0,
        "promptLooseActors": undefined,
        "promptLooseProvenances": undefined,
        "provenances": Array [],
        "provenancesWithNonExistingActors": Array [],
        "relatedResources": Array [],
        "restrictionGrounds": Object {},
        "selectedDirectories": Array [],
        "selectedFiles": Array [],
        "selectedProject": undefined,
        "setOtherIdentifierValidationError": [Function],
        "spatials": Array [],
        "temporals": Array [],
        "title": Object {
          "en": "",
          "fi": "",
        },
        "useDoi": false,
      },
    }
  }
/>
`;

exports[`Qvain.Description should render <OtherIdentifierField /> 1`] = `
<OtherIdentifierField
  Stores={
    Object {
      "Env": Env {
        "environment": "test",
        "history": RouterStore {
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "history": null,
          "push": [Function],
          "replace": [Function],
        },
        "metaxApiV2": true,
      },
      "Locale": Locale {
        "currentLang": "en",
        "languages": Array [
          "en",
          "fi",
        ],
      },
      "Qvain": Qvain {
        "Actors": Actors {
          "Qvain": [Circular],
          "actorInEdit": null,
          "actors": Array [],
          "editDataset": [Function],
          "getDatasetOrganizations": [Function],
          "getReferenceOrganizations": [Function],
          "getReferenceOrganizationsForActor": [Function],
          "loadingReferenceOrganizations": Object {},
          "onSuccessfulCreationCallbacks": Array [],
          "referenceOrganizationErrors": Object {},
          "referenceOrganizations": Object {},
          "setSelectedActor": undefined,
          "toBackend": [Function],
        },
        "Env": Env {
          "environment": "test",
          "history": RouterStore {
            "go": [Function],
            "goBack": [Function],
            "goForward": [Function],
            "history": null,
            "push": [Function],
            "replace": [Function],
          },
          "metaxApiV2": true,
        },
        "Files": Files {
          "AddItemsView": AddItemsView {
            "Files": [Circular],
            "checkedState": Object {},
            "defaultShowLimit": 20,
            "getTopmostChecked": [Function],
            "isOpen": [Function],
            "openState": Object {},
            "showLimitIncrement": 20,
            "showLimitState": Object {},
          },
          "Qvain": [Circular],
          "SelectedItemsView": SelectedItemsView {
            "Files": [Circular],
            "checkedState": Object {},
            "defaultShowLimit": 20,
            "getTopmostChecked": [Function],
            "hideRemoved": false,
            "isOpen": [Function],
            "openState": Object {},
            "showLimitIncrement": 20,
            "showLimitState": Object {},
          },
          "cache": Object {},
          "cancelOnReset": [Function],
          "datasetIdentifier": null,
          "fetchRootIdentifier": [Function],
          "getItemByPath": [Function],
          "inEdit": undefined,
          "loadingMetadata": null,
          "loadingProjectInfo": null,
          "loadingProjectRoot": null,
          "metadataToMetax": [Function],
          "originalMetadata": Object {},
          "projectLocked": false,
          "promiseManager": PromiseManager {
            "add": [Function],
            "promises": Array [],
          },
          "refreshModalDirectory": null,
          "root": null,
          "selectedProject": undefined,
        },
        "Provenances": Provenances {
          "Parent": [Circular],
          "RelatedResources": RelatedResources {
            "Parent": [Circular],
            "Template": [Function],
            "attachRefs": [Function],
            "cloneRefs": [Function],
            "detachRefs": [Function],
            "fieldName": "relatedResources",
            "isParentRoot": [Function],
            "readonly": false,
            "references": Array [],
            "relatedResourceToBackend": [Function],
            "saveEdited": [Function],
            "saveNew": [Function],
            "toBackend": [Function],
          },
          "Spatials": Spatials {
            "Parent": [Circular],
            "Template": [Function],
            "attachRefs": [Function],
            "cloneRefs": [Function],
            "detachRefs": [Function],
            "fieldName": "spatials",
            "isParentRoot": [Function],
            "readonly": false,
            "references": Array [],
            "saveEdited": [Function],
            "saveNew": [Function],
            "spatialToBackend": [Function],
            "toBackend": [Function],
          },
          "Template": [Function],
          "attachRefs": [Function],
          "cloneRefs": [Function],
          "detachRefs": [Function],
          "fieldName": "provenances",
          "isParentRoot": [Function],
          "readonly": false,
          "references": Array [
            "associations",
          ],
          "saveEdited": [Function],
          "saveNew": [Function],
          "toBackend": [Function],
        },
        "RelatedResources": RelatedResources {
          "Parent": [Circular],
          "Template": [Function],
          "attachRefs": [Function],
          "cloneRefs": [Function],
          "detachRefs": [Function],
          "fieldName": "relatedResources",
          "isParentRoot": [Function],
          "readonly": false,
          "references": Array [],
          "relatedResourceToBackend": [Function],
          "saveEdited": [Function],
          "saveNew": [Function],
          "toBackend": [Function],
        },
        "Spatials": Spatials {
          "Parent": [Circular],
          "Template": [Function],
          "attachRefs": [Function],
          "cloneRefs": [Function],
          "detachRefs": [Function],
          "fieldName": "spatials",
          "isParentRoot": [Function],
          "readonly": false,
          "references": Array [],
          "saveEdited": [Function],
          "saveNew": [Function],
          "spatialToBackend": [Function],
          "toBackend": [Function],
        },
        "Temporals": Temporals {
          "Parent": [Circular],
          "Template": [Function],
          "attachRefs": [Function],
          "cloneRefs": [Function],
          "detachRefs": [Function],
          "editMode": false,
          "fieldName": "temporals",
          "hasChanged": false,
          "inEdit": Object {
            "endDate": undefined,
            "startDate": undefined,
            "uiid": "0df3997e-7cb7-4aff-87f9-e245d1ce4b19",
          },
          "isParentRoot": [Function],
          "readonly": false,
          "references": Array [],
          "saveEdited": [Function],
          "saveNew": [Function],
          "toBackend": [Function],
          "validationError": undefined,
        },
        "accessType": Object {
          "name": undefined,
          "url": "http://uri.suomi.fi/codelist/fairdata/access_type/code/open",
        },
        "changed": false,
        "createExternalResourceUIId": [Function],
        "createLooseActorPromise": [Function],
        "createLooseProvenancePromise": [Function],
        "cumulativeState": 0,
        "dataCatalog": undefined,
        "datasetLanguage": undefined,
        "datasetLanguageArray": Array [],
        "deprecated": false,
        "description": Object {
          "en": "",
          "fi": "",
        },
        "deselectChildren": [Function],
        "deselectParents": [Function],
        "embargoExpDate": undefined,
        "existingDirectories": Array [],
        "existingFiles": Array [],
        "extResFormOpen": false,
        "externalResourceInEdit": Object {
          "accessUrl": "",
          "downloadUrl": "",
          "id": undefined,
          "title": "",
          "useCategory": "",
        },
        "externalResources": Array [],
        "fieldOfScience": undefined,
        "fieldOfScienceArray": Array [],
        "fixDeprecatedModalOpen": false,
        "hierarchy": Object {},
        "idaPickerOpen": false,
        "inEdit": undefined,
        "infrastructure": undefined,
        "infrastructures": Array [],
        "issuedDate": undefined,
        "keywordString": "",
        "keywordsArray": Array [],
        "license": Object {
          "identifier": "http://uri.suomi.fi/codelist/fairdata/license/code/CC-BY-4.0",
          "name": undefined,
        },
        "licenseArray": Array [],
        "mergeArraysByIdentifier": [Function],
        "metadataModalFile": undefined,
        "newCumulativeState": 0,
        "original": undefined,
        "otherIdentifier": "",
        "otherIdentifiersArray": Array [],
        "otherIdentifiersValidationError": null,
        "otherLicenseUrl": "",
        "preservationState": 0,
        "promptLooseActors": undefined,
        "promptLooseProvenances": undefined,
        "provenances": Array [],
        "provenancesWithNonExistingActors": Array [],
        "relatedResources": Array [],
        "restrictionGrounds": Object {},
        "selectedDirectories": Array [],
        "selectedFiles": Array [],
        "selectedProject": undefined,
        "setOtherIdentifierValidationError": [Function],
        "spatials": Array [],
        "temporals": Array [],
        "title": Object {
          "en": "",
          "fi": "",
        },
        "useDoi": false,
      },
    }
  }
/>
`;

exports[`Qvain.RightsAndLicenses should render <AccessType /> 1`] = `
<Card
  bottomContent={false}
>
  <form__LabelLarge
    htmlFor="accessTypeSelect"
  >
    <Translate
      component="span"
      content="qvain.rightsAndLicenses.accessType.title"
    />
  </form__LabelLarge>
  <Translate
    attributes={
      Object {
        "placeholder": "qvain.rightsAndLicenses.accessType.placeholder",
      }
    }
    clearable={true}
    component={[Function]}
    inputId="accessTypeSelect"
    isDisabled={false}
    name="accessType"
    onBlur={[Function]}
    onChange={[Function]}
    options={Array []}
    value={
      Object {
        "label": undefined,
        "value": "http://uri.suomi.fi/codelist/fairdata/access_type/code/open",
      }
    }
  />
  <validationError__ValidationError />
</Card>
`;

exports[`Qvain.RightsAndLicenses should render <Licenses /> 1`] = `
<Card
  bottomContent={false}
>
  <form__LabelLarge
    htmlFor="licenseSelect"
  >
    <Translate
      component="span"
      content="qvain.rightsAndLicenses.license.title"
    />
  </form__LabelLarge>
  <Translate
    component="p"
    content="qvain.rightsAndLicenses.license.infoText"
  />
  <Translate
    attributes={
      Object {
        "placeholder": "qvain.rightsAndLicenses.license.placeholder",
      }
    }
    component={[Function]}
    inputId="licenseSelect"
    isClearable={true}
    isDisabled={false}
    name="license"
    onBlur={[Function]}
    onChange={[Function]}
    value={
      Object {
        "label": undefined,
        "value": undefined,
      }
    }
  />
  <licenses__ButtonContainer>
    <licenses__AddNewButton
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <Translate
        component="span"
        content="qvain.rightsAndLicenses.license.addButton"
      />
    </licenses__AddNewButton>
  </licenses__ButtonContainer>
</Card>
`;

exports[`Qvain.RightsAndLicenses should render <RightsAndLicenses /> 1`] = `
<div
  className="container"
>
  <title__SectionTitle>
    <Translate
      component="span"
      content="qvain.rightsAndLicenses.title"
    />
    <Tooltip
      align="Right"
      close={[Function]}
      isOpen={false}
      text={<LicensesInfo />}
    >
      <HelpIcon
        aria-label="Rights And Licenses info"
        onClick={[Function]}
      />
    </Tooltip>
  </title__SectionTitle>
  <inject-License-with-Stores />
  <inject-AccessType-with-Stores />
</div>
`;
